# hermes-node

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: ci.yml  release.yml
cmake/: version.cmake
doc/: DEBUGGER.md  DESIGN.md
examples/: README.md  hello-fs-async-cb.js  hello-fs-promises.js  hello-fs.js  http-server.ts
examples/babel-parser/: package-lock.json  package.json  parse.js  transform.js
examples/bufferutil-addon/: mask.js  package-lock.json  package.json
examples/http-server/: http-server.js
examples/yargs-cli/: greet.js  package-lock.json  package.json
history/: README.md
history/initial/: 2026-02-14-hermes-node-compat-detailed-plan.md  2026-02-15-async-generators-fix-plan.md  2026-02-16-phase5-networking-plan.md  2026-02-16-repl-analysis.md  2026-02-18-repl-plan.md  2026-02-24-debugger-plan.md  TODO.md  cjs-module-resolution-plan.md  cjs-module-resolution-project.md  fix-hermes-napi.md  issues-and-workarounds.md  memory.md  progress-1.md  progress-repl.md  progress.md  project.md
history/plans/: 2026-02-24-runtime-refactor.md  2026-05-14-ci-and-releases-design.md  debugger-runtime-refactor.md  http-parser-connections-list.md  progress-ci-and-releases.md  progress-http-parser.md
include/hermes/node-compat/: version.h.in
lib/binding-registry/: CMakeLists.txt  binding_registry.cpp
lib/bindings/: CMakeLists.txt  handle_wrap_base.cpp  libuv_stream_base.cpp  node_async_context_frame.cpp  node_async_wrap.cpp  node_buffer.cpp  node_cares_wrap.cpp  node_config.cpp  node_constants.cpp  node_contextify.cpp  node_credentials.cpp  node_crypto.cpp  node_encoding.cpp  node_errors.cpp  node_file.cpp  node_file_dir.cpp  node_fs_event_wrap.cpp  node_http_parser.cpp  node_module_wrap.cpp  node_modules.cpp  node_os.cpp  node_pipe_wrap.cpp  node_process_wrap.cpp  node_spawn_sync.cpp  node_stdio.cpp  node_stream_wrap.cpp  node_string_decoder.cpp  node_symbols.cpp  node_task_queue.cpp  node_tcp_wrap.cpp  node_timers.cpp  node_trace_events.cpp  node_tty_wrap.cpp  node_types.cpp  node_udp_wrap.cpp  node_url.cpp  node_util.cpp  node_uv.cpp  node_zlib.cpp
lib/embedded-modules/: CMakeLists.txt  embedded-modules.txt  embedded_modules.cpp  vendored-packages.js.in
lib/event-loop/: CMakeLists.txt  uv_event_loop.cpp
lib/inspector/: CMakeLists.txt  inspector_bridge.cpp
lib/module-loader/: CMakeLists.txt  module_loader.cpp
lib/placeholder/: CMakeLists.txt  placeholder.cpp
lib/process/: CMakeLists.txt  node_process.cpp
lib/runtime/: CMakeLists.txt  hermes_node_runtime.cpp
libjs/: console-init.js  loader.js  primordials.js  process-events.js  setup-stdio.js
libjs-node/: README.md  http.js
libjs-node/internal/: child_process.js
libjs-node/internal/repl/: utils.js
libjs/shims/: cluster.js  crypto.js  domain.js  https.js  inspector-server.js  tls.js
libjs/shims/internal/: abort_controller.js  blob.js  event_target.js  options.js  url.js
test/: lit.cfg  primordials.js  run-boot-test.sh  run-hermes-node-test.sh  run-node-test.sh  run-primordials-test.sh  run-stdio-test.sh  test-async-wrap.js  test-boot.js  test-bootstrap.js  test-buffer.js  test-builtin-module-shim.js  test-child-process.js  test-cjs-loader-integration.js  test-cjs-loader-module.js  test-cjs-node-modules-basic.js  test-cjs-node-modules-circular.js  test-cjs-node-modules-exports.js  test-cjs-node-modules-main.js  test-cjs-node-modules-nested.js  test-cjs-real-npm-package.js  test-cjs-require-json.js  test-cjs-require-resolve.js  test-cli-eval.js  test-compile-function-cjs.js  test-config.js  test-console.js  test-constants.js  test-core-modules.js  test-crypto-hash.js  test-crypto-random.js  test-dns-resolve.js  test-dns.js  test-domain-basic.js  test-encoding.js  test-errors.js  test-esm-formats.js  test-fs-async-verify.js  test-fs-async.js  test-fs-cp-sync.js  (+59 more)
test/fixtures/: shebang-script.js  test-package-bad-type.json  test-package-cjs.json  test-package-string-exports.json  test-package.json
test/fixtures/native-addon-pkg/: main.js
test/fixtures/node-modules-basic/: main.js
test/fixtures/node-modules-circular/: main.js
test/fixtures/node-modules-exports/: main.js
test/fixtures/node-modules-main/: main.js
test/fixtures/node-modules-nested/: main.js
test/fixtures/real-npm-package/: main.js  package-lock.json
test/fixtures/require-json/: data.json  main.js
test/fixtures/require-resolve/: local-module.js  main.js
test/fixtures/test-addon/: hello_addon.c
test/node-tests/: lit.local.cfg
test/node-tests/common/: countdown.js  fixtures.js  index.js  tmpdir.js
test/node-tests/fixtures/: child_process_should_emit_error.js  exit.js
test/node-tests/parallel/: test-child-process-cwd.js  test-child-process-exec-cwd.js  test-child-process-exec-env.js  test-child-process-exec-error.js  test-child-process-exec-timeout.js  test-child-process-exit-code.js  test-child-process-kill.js  test-child-process-spawn-args.js  test-child-process-spawn-error.js  test-child-process-spawnsync-env.js  test-child-process-spawnsync-input.js  test-child-process-spawnsync-timeout.js  test-child-process-spawnsync.js  test-fs-chmod.js  test-fs-link.js  test-fs-mkdir.js  test-fs-open.js  test-fs-readdir.js  test-fs-readfile.js  test-fs-stat.js  test-fs-truncate.js  test-http-client-get-url.js  test-http-content-length.js  test-http-contentLength0.js  test-http-date-header.js  test-http-head-response-has-no-body.js  test-http-keep-alive.js  test-http-methods.js  test-http-no-content-length.js  test-http-request-end.js  (+15 more)
tools/: gen-embedded-registry.py  wrap-cjs.py
tools/hermes-node/: CMakeLists.txt  hermes-node.cpp
unittests/: BindingRegistryTest.cpp  CAresIntegrationTest.cpp  CMakeLists.txt  LlhttpIntegrationTest.cpp  ModuleLoaderTest.cpp  NodeProcessTest.cpp  UvEventLoopTest.cpp  UvIntegrationTest.cpp
unittests/module-loader-testdata/: circ_a.js  circ_b.js  test_module_a.js  test_module_b.js  uses_binding.js  uses_nested.js  uses_primordials.js
unittests/module-loader-testdata/internal/: nested.js
utils/: format.sh
(+65 files in other folders)
